# WithEase

./: .gitattributes  .gitignore  BUILD_EXE.bat  BUILD_LINUX.sh  CONTRIBUTING.md  LICENSE  README.md  START_AccessMate.bat  START_WithEase.bat  START_WithEase.sh  TEST_FreshUser.bat  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-release.yml  ci.yml
docs/: MODULE_GUIDE.md  WithEase-Anleitung.docx
examples/dictation/: manifest.json  module.py
examples/example_module/: manifest.json  module.py
examples/hydration/: manifest.json  module.py
profiles/: default.json
src/accessmate/: __main__.py  app.py  tray.py
src/accessmate/core/: action_manager.py  autostart.py  config.py  event_bus.py  i18n.py  module_loader.py  module_store.py  resources.py  updater.py  win_keyboard_hook.py
src/accessmate/gui/: main_window.py  theme.py  ui_utils.py  update_dialog.py
src/accessmate/locales/: de.json  en.json
src/accessmate/modules/: base.py  keyboard.py  macros.py  mouse.py
src/withease/: __main__.py  app.py  tray.py
src/withease/core/: action_manager.py  autostart.py  config.py  event_bus.py  i18n.py  keyboard_hook.py  module_loader.py  module_store.py  posix_keyboard_hook.py  resources.py  updater.py  win_keyboard_hook.py
src/withease/gui/: feedback_dialog.py  main_window.py  theme.py  ui_utils.py  update_dialog.py
src/withease/locales/: de.json  en.json
src/withease/modules/: base.py  keyboard.py  macros.py  (+1 more)
store/: modules.json
tests/: test_action_manager.py  test_config.py  test_keyboard_altgr.py
(+29 files in other folders)
