[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "withease"
version = "0.1.0"
description = "Modular accessibility assistant for people with motor impairments"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["accessibility", "assistive-technology", "mouse", "keyboard", "disability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "PySide6>=6.6.0",
    "pynput>=1.7.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-qt>=4.2",
    "ruff>=0.3",
]
# Note: the Dictation add-on (examples/dictation/) is an external module and
# documents its own optional dependencies (sounddevice, requests,
# faster-whisper) – they are intentionally not part of the core package.

[project.gui-scripts]
withease = "withease.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
